Fix a bug where blog intro has a wrong formatting on mobile devices

--- a/django-website/frontend/client/scss/pages/_blog-page.scss
+++ b/django-website/frontend/client/scss/pages/_blog-page.scss
@@ -11,8 +11,7 @@
 
 .blog-intro {
   font-size: 1.618rem;
-  margin: auto;
-  max-width: calc(76.999rem + 11.089rem);
+  max-width: 29.03rem;
 }
 
 .blog-container {
